--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -18909,7 +18909,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 287, 78, 145, 11
   CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 225, 90, 100, 11
   CONTROL "", 106, "Edit", WS_BORDER, 362, 90, 70, 11
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 225, 102, 61, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 225, 103, 61, 11
   CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 287, 102, 145, 11
   CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 225, 114, 61, 11
   CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 287, 114, 145, 11
@@ -18953,17 +18953,19 @@ FONT 8, "MS Sans Serif"
   CONTROL "0", 420, "Static", SS_RIGHT|WS_GROUP, 578, 356, 80, 15
   CONTROL "", 90, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 96, 30, 24, 11
   CONTROL "", 100, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 121, 30, 34, 11
-  CONTROL "", 105, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 156, 30, 17, 11
+  CONTROL "", 105, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 156, 30, 18, 11
   CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 96, 42, 78, 11
   CONTROL "", 111, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 96, 54, 78, 11
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 96, 104, 78, 11
-  CONTROL "Impuestos incluidos", 129, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 116, 75, 10
-  CONTROL "", 218, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 96, 90, 78, 186
+  CONTROL "Reparación cubierta por garantía", 115, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 68, 121, 8
+  CONTROL "", 122, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 96, 78, 78, 11
+  CONTROL "", 218, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 96, 90, 78, 186
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 96, 103, 78, 11
+  CONTROL "Impuestos incluidos", 129, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 117, 75, 8
   CONTROL "Punto verde", 409, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 462, 328, 52, 10
   CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 44, 289, 160, 61
   CONTROL "Recargo de equivalencia", 406, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 462, 346, 93, 10
   CONTROL "Número", -1, "Static", WS_GROUP, 44, 33, 30, 8
-  CONTROL "Estado", 121, "Static", WS_GROUP, 44, 107, 51, 8
+  CONTROL "Estado", -1, "Static", WS_GROUP, 44, 106, 51, 8
   CONTROL "Cliente", -1, "Static", WS_GROUP, 178, 33, 46, 8
   CONTROL "Nombre", -1, "Static", WS_GROUP, 178, 45, 46, 8
   CONTROL "N.I.F.", -1, "Static", WS_GROUP, 178, 57, 46, 8
@@ -18975,7 +18977,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Riesgo", -1, "Static", WS_GROUP, 329, 57, 32, 8
   CONTROL "Teléfono", -1, "Static", WS_GROUP, 329, 93, 32, 8
   CONTROL "Tarifa per.", -1, "Static", WS_GROUP, 435, 33, 28, 8
-  CONTROL "Dirección", -1, "Static", WS_GROUP, 178, 105, 46, 8
+  CONTROL "Dirección", -1, "Static", WS_GROUP, 178, 106, 46, 8
   CONTROL "Almacén", -1, "Static", WS_GROUP, 178, 117, 46, 8
   CONTROL "Pago", -1, "Static", WS_GROUP, 436, 45, 28, 8
   CONTROL "Agente", -1, "Static", WS_GROUP, 436, 57, 28, 8
@@ -18994,16 +18996,13 @@ FONT 8, "MS Sans Serif"
   CONTROL "0", 402, "Static", SS_RIGHT|WS_GROUP, 578, 310, 80, 8
   CONTROL "0", 404, "Static", SS_RIGHT|WS_GROUP, 578, 328, 80, 8
   CONTROL "", 408, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 89, 357, 108, 11
-  CONTROL "Entrega en", 114, "Static", WS_GROUP, 44, 57, 51, 8
-  CONTROL "", 113, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 4, 54, 35, 11
-  CONTROL "", 122, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 96, 78, 78, 11
+  CONTROL "Entrega en", 112, "Static", WS_GROUP, 44, 57, 51, 8
   CONTROL "Su referencia", 123, "Static", WS_GROUP, 44, 81, 51, 8
   CONTROL "", 201, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE|SS_RIGHTJUST, 518, 90, 16, 11
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "S.A.T. de clientes", -1, "Static", WS_GROUP, 44, 4, 120, 8
   CONTROL "Fecha", -1, "Static", WS_GROUP, 44, 45, 25, 8
   CONTROL "Situación ", -1, "Static", WS_GROUP, 44, 94, 37, 8
-  CONTROL "Reparación cuebierta por garantia", 4001, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 67, 121, 10
 }
 
 SATCLI_2 DIALOG DISCARDABLE 45, 10, 670, 375
