--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -15227,7 +15227,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 200, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 74, 47, 43, 11
   CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 59, 68, 11
   CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 71, 68, 11
-  CONTROL "Aplicar atípicas de clientes", 411, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 87, 101, 10
+  CONTROL "Aplicar atípicas de clientes o tarifa de artículo", 411, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 87, 158, 10
   CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 99, 68, 11
   CONTROL "", 180, "Edit", ES_RIGHT|WS_BORDER, 74, 121, 68, 11
   CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 266, 140, 50, 14
