--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -2642,7 +2642,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Progreso", -1, "Button", BS_GROUPBOX, 2, 42, 231, 23
 }
 
-ADDFAMILIA DIALOG DISCARDABLE 148, 25, 283, 325
+ADDFAMILIA DIALOG DISCARDABLE 148, 25, 283, 334
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Agregar familias de artículos"
 FONT 8, "MS Sans Serif"
@@ -2679,8 +2679,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "Pedidos", 220, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 265, 60, 10
   CONTROL "Albaranes", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 277, 60, 10
   CONTROL "Facturas", 240, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 289, 60, 10
-  CONTROL "&Aceptar", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 175, 308, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 230, 308, 50, 14
+  CONTROL "S.A.T.", 260, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 301, 36, 10
+  CONTROL "&Aceptar", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 175, 317, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 230, 317, 50, 14
   CONTROL "Hasta", -1, "Static", WS_GROUP, 8, 27, 37, 8
   CONTROL "Desde", -1, "Static", WS_GROUP, 8, 14, 37, 8
   CONTROL "Familias", -1, "Button", BS_GROUPBOX, 2, 2, 278, 38
@@ -2689,7 +2690,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Dto. artículo", -1, "Static", WS_GROUP, 8, 57, 45, 8
   CONTROL "Comisión agente", -1, "Static", WS_GROUP, 8, 96, 57, 8
   CONTROL "Fechas", -1, "Button", BS_GROUPBOX, 2, 205, 278, 35
-  CONTROL "Aplicar en ", -1, "Button", BS_GROUPBOX, 2, 242, 278, 62
+  CONTROL "Aplicar en ", -1, "Button", BS_GROUPBOX, 2, 242, 278, 72
   CONTROL "Desde", -1, "Static", WS_GROUP, 8, 216, 24, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 8, 229, 22, 8
   CONTROL "%", -1, "Static", WS_GROUP, 130, 57, 7, 8
@@ -13601,7 +13602,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Dto. 6", 714, "Static", WS_GROUP, 218, 232, 20, 8
 }
 
-CLIATP_1 DIALOG DISCARDABLE 35, -50, 298, 169
+CLIATP_1 DIALOG DISCARDABLE 35, -50, 298, 186
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
@@ -13611,17 +13612,18 @@ FONT 8, "MS Sans Serif"
   CONTROL "Pedidos", 190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 62, 39, 8
   CONTROL "Albaranes", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 74, 45, 8
   CONTROL "Facturas", 210, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 86, 41, 8
-  CONTROL "Cajas ", 220, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 8, 112, 32, 10
-  CONTROL "Unidades", 221, "Button", BS_AUTORADIOBUTTON, 8, 124, 44, 10
-  CONTROL "", 230, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 135, 60, 11
-  CONTROL "", 240, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 147, 60, 11
-  CONTROL "Aplicar en", -1, "Button", BS_GROUPBOX, 3, 39, 290, 60
+  CONTROL "Cajas ", 220, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 8, 125, 32, 10
+  CONTROL "Unidades", 221, "Button", BS_AUTORADIOBUTTON, 8, 137, 44, 10
+  CONTROL "", 230, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 148, 60, 11
+  CONTROL "", 240, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 160, 60, 11
+  CONTROL "Aplicar en", -1, "Button", BS_GROUPBOX, 3, 39, 290, 73
   CONTROL "Desde", -1, "Static", WS_GROUP, 9, 12, 24, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 9, 24, 22, 8
-  CONTROL "A vender", -1, "Static", WS_GROUP, 9, 138, 31, 8
-  CONTROL "A cobrar", -1, "Static", WS_GROUP, 9, 150, 30, 8
-  CONTROL "Ofertas X * Y", -1, "Button", BS_GROUPBOX, 3, 101, 290, 60
+  CONTROL "A vender", -1, "Static", WS_GROUP, 9, 151, 31, 8
+  CONTROL "A cobrar", -1, "Static", WS_GROUP, 9, 163, 30, 8
+  CONTROL "Ofertas X * Y", -1, "Button", BS_GROUPBOX, 3, 114, 290, 60
   CONTROL "Fechas", -1, "Button", BS_GROUPBOX, 3, 0, 290, 36
+  CONTROL "S.A.T.", 250, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 98, 36, 8
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
