--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -2320,11 +2320,11 @@ FONT 8, "MS Sans Serif"
   CONTROL "Modificar descripciones", 160, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 59, 87, 10
   CONTROL "Activar búsqueda circular", 206, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 70, 93, 10
   CONTROL "Modificar tipo de impuesto", 170, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 81, 95, 10
-  CONTROL "Recoger usuarios", 187, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 39, 69, 10
-  CONTROL "Recoger el número de lote", 185, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 49, 97, 10
-  CONTROL "Utilizar rejillas de entrada de propiedades", 138, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 59, 143, 10
-  CONTROL "Cambiar precios costo automáticamente", 190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 70, 139, 10
-  CONTROL "", 139, "Edit", WS_BORDER|WS_TABSTOP, 310, 80, 115, 11
+  CONTROL "Recoger usuarios", 187, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 39, 69, 10
+  CONTROL "Recoger el número de lote", 185, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 49, 97, 10
+  CONTROL "Utilizar rejillas de entrada de propiedades", 138, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 59, 143, 10
+  CONTROL "Cambiar precios costo automáticamente", 190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 70, 139, 10
+  CONTROL "", 139, "Edit", WS_BORDER|WS_TABSTOP, 309, 80, 115, 11
   CONTROL "Recoger direcciones", 181, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 106, 79, 10
   CONTROL "Recoger agentes", 182, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 117, 68, 10
   CONTROL "Habilitar punto verde", 191, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 128, 79, 10
@@ -2333,26 +2333,27 @@ FONT 8, "MS Sans Serif"
   CONTROL "Seleccionar tarifas en línea", 110, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 161, 99, 10
   CONTROL "Agrupar entregas a cuenta en recibos", 204, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 172, 132, 10
   CONTROL "Buscar precios en tarifas inferiores", 195, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 183, 121, 10
-  CONTROL "Multiples tipos de movimientos ", 180, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 106, 110, 10
-  CONTROL "Avisar en ventas sin valorar", 184, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 117, 100, 10
-  CONTROL "Avisar saldo pendiente", 192, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 128, 85, 10
-  CONTROL "Habilitar impuestos especiales", 183, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 139, 107, 10
-  CONTROL "Modificar impuestos especiales", 188, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 247, 150, 111, 10
-  CONTROL "Costo actual en documentos", 761, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 172, 103, 10
-  CONTROL "No mostrar precios de costo en ventas", 205, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 183, 135, 10
-  CONTROL "Aplicar IVA a impuestos especiales", 153, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 247, 161, 125, 10
+  CONTROL "Multiples tipos de movimientos ", 180, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 106, 110, 10
+  CONTROL "Avisar en ventas sin valorar", 184, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 117, 100, 10
+  CONTROL "Avisar saldo pendiente", 192, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 128, 85, 10
+  CONTROL "Habilitar impuestos especiales", 183, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 139, 107, 10
+  CONTROL "Modificar impuestos especiales", 188, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 246, 150, 111, 10
+  CONTROL "Costo actual en documentos", 761, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 172, 103, 10
+  CONTROL "No mostrar precios de costo en ventas", 205, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 183, 135, 10
+  CONTROL "Aplicar IVA a impuestos especiales", 153, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 246, 161, 125, 10
   CONTROL "No usar movimientos para el costo medio", 203, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 210, 142, 10
-  CONTROL "Usar precios de costos de proveedores", 198, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 210, 137, 10
+  CONTROL "Usar precios de costos de proveedores", 198, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 210, 137, 10
   CONTROL "Importes exactos en tickets", 186, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 235, 99, 10
   CONTROL "Recoger ubicaciones en sala", 196, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 245, 105, 10
   CONTROL "Mostrar la sala antes de iniciar la venta", 158, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 255, 135, 10
   CONTROL "Ordenar artículos por nombre", 159, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 265, 105, 10
   CONTROL "Asistente para devoluciones y vales", 197, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 275, 126, 10
-  CONTROL "Habilitar programa de fideliazación", 193, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 235, 121, 10
-  CONTROL "Usar colores en los artículos del táctil", 990, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 245, 164, 10
-  CONTROL "Crear tickets para recoger desde táctil", 125, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 255, 153, 10
-  CONTROL "Crear tickets para llevar desde táctil", 126, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 265, 164, 10
-  CONTROL "Crear tickets  de encargos desde táctil", 127, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 275, 164, 10
+  CONTROL "Habilitar programa de fideliazación", 193, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 235, 121, 10
+  CONTROL "Usar colores en los artículos del táctil", 990, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 245, 131, 10
+  CONTROL "Crear tickets para recoger desde táctil", 125, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 255, 133, 10
+  CONTROL "Crear tickets para llevar desde táctil", 126, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 265, 125, 10
+  CONTROL "Crear tickets de encargos desde táctil", 127, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 275, 134, 10
+  CONTROL "No acumular unidades en táctil", 128, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 372, 274, 53, 10
   CONTROL "Pedidos", 260, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 302, 39, 10
   CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 105, 301, 320, 11
   CONTROL "Direcciones", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 314, 51, 10
@@ -2367,8 +2368,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Opciones generales del programa", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 384, 8
   CONTROL "Ventas", -1, "Button", BS_GROUPBOX, 44, 95, 384, 101
   CONTROL "Compras", -1, "Button", BS_GROUPBOX, 44, 198, 384, 25
-  CONTROL "TPV / PDA", -1, "Button", BS_GROUPBOX, 44, 226, 384, 63
-  CONTROL "Nombre del impuesto", -1, "Static", WS_GROUP, 235, 83, 70, 8
+  CONTROL "Terminal punto de venta", -1, "Button", BS_GROUPBOX, 44, 226, 384, 63
+  CONTROL "Nombre del impuesto", -1, "Static", WS_GROUP, 234, 83, 70, 8
 }
 
 CONSERFAC DIALOG DISCARDABLE 111, 68, 313, 288
