--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -48,3 +48,4 @@ piggy_bank_32_alpha BITMAP "..\\bmp\\piggy_bank_32_alpha.bmp"
 power-drill_user1_16 BITMAP "..\\bmp\\power-drill_user1_16.bmp"
 power-drill_user1_32 BITMAP "..\\bmp\\power-drill_user1_32.bmp"
 logogestool_48 BITMAP "..\\bmp\\logogestool_48.bmp"
+cube_yellow_chart_32 BITMAP "..\\bmp\\cube_yellow_chart_32.bmp"
