--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -49,3 +49,7 @@ power-drill_user1_16 BITMAP "..\\bmp\\power-drill_user1_16.bmp"
 power-drill_user1_32 BITMAP "..\\bmp\\power-drill_user1_32.bmp"
 logogestool_48 BITMAP "..\\bmp\\logogestool_48.bmp"
 cube_yellow_chart_32 BITMAP "..\\bmp\\cube_yellow_chart_32.bmp"
+user1_chart_32 BITMAP "..\\bmp\\user1_chart_32.bmp"
+businessman_chart_32 BITMAP "..\\bmp\\businessman_chart_32.bmp"
+user1_chart_16 BITMAP "..\\bmp\\user1_chart_16.bmp"
+businessman_chart_16 BITMAP "..\\bmp\\businessman_chart_16.bmp"
