--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19087,3 +19087,43 @@ FONT 8, "MS Sans Serif"
   CONTROL "Información del stock de articulo", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 446, 8
 }
 
+LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
+
+IMPSERIES DIALOG DISCARDABLE 166, 121, 294, 243
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "Número", 201, "Button", BS_AUTORADIOBUTTON, 8, 13, 38, 12
+  CONTROL "Fecha", 202, "Button", BS_AUTORADIOBUTTON, 8, 51, 34, 12
+  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 72, 24, 28, 11
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 103, 24, 55, 11
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 160, 24, 18, 11
+  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 72, 36, 28, 11
+  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 103, 36, 55, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 160, 36, 18, 11
+  CONTROL "", 210, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 72, 61, 86, 12
+  CONTROL "", 220, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 72, 75, 86, 12
+  CONTROL "Invertir orden", 500, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 106, 55, 12
+  CONTROL "Número de copias predeterminado", 170, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 135, 121, 12
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 72, 149, 38, 11
+  CONTROL "", 90, "Edit", WS_BORDER|WS_TABSTOP, 72, 177, 38, 11
+  CONTROL "", 91, "Edit", WS_BORDER|WS_TABSTOP, 112, 177, 160, 11
+  CONTROL "", 92, "TBtnBmp", 0x00000000, 274, 177, 12, 11
+  CONTROL "", 160, "Edit", WS_BORDER, 72, 205, 200, 11
+  CONTROL "", 161, "TBtnBmp", 0x00000000, 274, 204, 12, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 186, 224, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 241, 224, 50, 14
+  CONTROL "Rango", -1, "Button", BS_GROUPBOX, 2, 2, 288, 91
+  CONTROL "Número de copias", -1, "Button", BS_GROUPBOX, 2, 124, 288, 40
+  CONTROL "Formato", -1, "Button", BS_GROUPBOX, 2, 167, 288, 25
+  CONTROL "Impresora", -1, "Button", BS_GROUPBOX, 2, 194, 288, 25
+  CONTROL "Desde", -1, "Static", WS_GROUP, 23, 27, 36, 8
+  CONTROL "Hasta", -1, "Static", WS_GROUP, 23, 39, 35, 8
+  CONTROL "Copias deseadas", -1, "Static", WS_GROUP, 8, 153, 59, 8
+  CONTROL "Código", -1, "Static", WS_GROUP, 8, 180, 26, 8
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 8, 208, 26, 8
+  CONTROL "Orden", -1, "Button", BS_GROUPBOX, 1, 94, 288, 29
+  CONTROL "Desde", -1, "Static", WS_GROUP, 23, 65, 36, 8
+  CONTROL "Hasta", -1, "Static", WS_GROUP, 23, 79, 35, 8
+}
+
