--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -53,3 +53,4 @@ user1_chart_32 BITMAP "..\\bmp\\user1_chart_32.bmp"
 businessman_chart_32 BITMAP "..\\bmp\\businessman_chart_32.bmp"
 user1_chart_16 BITMAP "..\\bmp\\user1_chart_16.bmp"
 businessman_chart_16 BITMAP "..\\bmp\\businessman_chart_16.bmp"
+cube_yellow_chart_16 BITMAP "..\\bmp\\cube_yellow_chart_16.bmp"
